--- a/css/styles-old.css
+++ b/css/styles-old.css
@@ -246,11 +246,11 @@ img {
   display: block;
 }
 .our-section-team {
-  background-color: #f4f4fd;
-  text-align: center;
+  /*background-color: #f4f4fd;
+  text-align: center;*/
   padding: 120px 0;
 }
-.our-second-title {
+/*.our-second-title {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
@@ -259,28 +259,28 @@ img {
   color: #2e2f42;
   text-transform: capitalize;
   margin-bottom: 72px;
-}
+}*/
 .worker-list {
   display: flex;
   gap: 24px;
   justify-content: space-evenly;
 }
 .worker-item {
-  background-color: #ffffff;
+  /*background-color: #ffffff;
   border-radius: 0 0 4px 4px;
   padding: 0px 0px 32px 0px;
   list-style-type: none;
   width: 264px;
   text-align: center;
   box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
-    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);*/
   flex-basis: calc((100% - 72px) / 4);
 }
-.worker-list-item {
+/*.worker-list-item {
   padding-top: 32px;
   padding-bottom: 32px;
-}
-.our-team-names {
+}*/
+/*.our-team-names {
   font-weight: 500;
   font-size: 20px;
   line-height: 1.2%;
@@ -288,29 +288,29 @@ img {
   text-align: center;
   color: #2e2f42;
   margin-bottom: 8px;
-}
-.team-descr {
+}*/
+/*.team-descr {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
   color: #434455;
-}
-.icon-list {
+}*/
+/*.icon-list {
   display: flex;
   justify-content: center;
   gap: 24px;
-}
-.icon-item {
+}*/
+/*.icon-item {
   width: 40px;
   height: 40px;
-}
-.icon-link:hover,
+}*/
+/*.icon-link:hover,
 .icon-link:focus {
   background-color: #404bbf;
-}
-.icon-link {
+}*/
+/*.icon-link {
   width: 100%;
   height: 100%;
   display: flex;
@@ -319,10 +319,10 @@ img {
   border-radius: 50%;
   background-color: #4d5ae5;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.icon-app {
+}*/
+/*.icon-app {
   fill: #f4f4fd;
-}
+}*/
 .our-portfolio-section {
   padding-top: 120px;
   padding-bottom: 120px;
