--- a/css/styles.css
+++ b/css/styles.css
@@ -449,10 +449,10 @@ button {
 .features {
   list-style-type: none;
   display: flex;
-  flex-direction: column;
+  /*flex-direction: column;*/
   padding-left: 15px;
   padding-right: 15px;
-  row-gap: 72px;
+  /* row-gap: 72px;*/
   max-width: 288px;
 }
 .features-list-item {
@@ -460,7 +460,7 @@ button {
   align-items: flex-start;
   flex-basis: calc((100% - 3 * 24px) / 4);
 }
-.hidden {
+.div-features-icon {
   display: none;
 }
 .list-features {
@@ -479,32 +479,28 @@ button {
   color: #434455;
   font-weight: 500;
 }
-/*@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) {
   .container {
-    max-width: 768px;
   }
   .features {
-    display: flex;
+    /*display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
-    row-gap: 24px;
+    column-gap: 24px;*/
   }
   .features-list-item {
     width: calc((100% - 24px) / 2);
   }
-}*/
+}
 @media screen and (min-width: 1158px) {
   .our-features-section {
-    padding: 120px 0;
-    padding-top: 96px;
+    padding-top: 120px;
+    padding-bottom: 120px;
   }
   .features {
-    display: flex;
     gap: 24px;
     list-style-type: none;
     display: flex;
-    max-width: 318px;
-    padding-left: 15px;
-    padding-right: 15px;
   }
   .div-features-icon {
     display: flex;
@@ -520,10 +516,6 @@ button {
   .icon-features {
     fill: #f4f4fd;
   }
-  .features-list-item {
-    width: 264px;
-    gap: 8px;
-  }
   .list-features {
     font-weight: 500;
     font-size: 20px;
@@ -531,5 +523,117 @@ button {
   }
   .text-features {
     font-weight: 400;
+  }
+  .features-list-item {
+    width: calc((100% - 72px) / 4);
+    width: 264px;
+    gap: 8px;
+  }
+}
+/* our team */
+img {
+  display: block;
+}
+.our-section-team {
+  background-color: #f4f4fd;
+  text-align: center;
+  padding: 96px 0;
+}
+.our-second-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.11;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  text-transform: capitalize;
+  margin-bottom: 72px;
+}
+.worker-list {
+  padding-left: 16px;
+  padding-right: 16px;
+}
+.worker-item {
+  background-color: #ffffff;
+  border-radius: 0 0 4px 4px;
+  padding-bottom: 0 32px;
+  list-style-type: none;
+  width: 264px;
+  text-align: center;
+  margin-bottom: 72px;
+  box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08),
+    0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+.worker-list-item {
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+.our-team-names {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #2e2f42;
+  margin-bottom: 8px;
+}
+.team-descr {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #434455;
+  padding-bottom: 8px;
+}
+.icon-list {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+}
+.icon-item {
+  width: 40px;
+  height: 40px;
+}
+.icon-link:hover,
+.icon-link:focus {
+  background-color: #404bbf;
+}
+.icon-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icon-app {
+  fill: #f4f4fd;
+}
+@media screen and (min-width: 768px) {
+  .worker-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 24px;
+  }
+  /*.worker-item {
+    width: calc((100% - 24px) / 2);
+  }*/
+}
+@media screen and (min-width: 1158px) {
+  .our-section-team {
+    padding: 120px 0;
+  }
+  .worker-list {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 24px;
+  }
+  .worker-item {
+    flex-basis: calc((100% - 72px) / 4);
   }
 }
